fix:crud arena, link bot-arena
