# app/api-node/src/resources/asm/BotResourceAsm.ts
@@ -1,8 +1,17 @@
 import { RobotsEntity } from "../../database/entities/RobotsEntity";
 import { IBotsResource } from "../IBotsResource";
+import { Singleton, Inject } from "typescript-ioc";
+import { GameProfileResourceAsm } from "./GameProfileResourceAsm";
+import { ArenaEntity } from "../../database/entities/ArenaEntity";
+import { RobotsArenaEntity } from "../../database/entities/RobotsArenaEntity";
 
+@Singleton
 export class BotResourceAsm {
-    public toResource(robot: RobotsEntity) {
+
+    @Inject
+    private gameProfileResourceAsm: GameProfileResourceAsm;
+
+    public async toResource(robot: RobotsEntity) {
         const resource : IBotsResource = {
             id: robot.id,
             botIp: robot.botIp,
@@ -15,6 +24,9 @@ export class BotResourceAsm {
             name: robot.name
         };
 
+        if (robot.player){
+            resource.gameProfile = await this.gameProfileResourceAsm.toResource(robot.player);
+        }
         return (resource);
     }
 
@@ -31,6 +43,31 @@ export class BotResourceAsm {
             name: bot.name 
         };
 
+        if (bot.gameProfile){
+            robot.player = this.gameProfileResourceAsm.toEntity(bot.gameProfile);
+        }
         return (robot);
+    }
+
+    public async AddArenaEntity(bot: RobotsEntity, arena: ArenaEntity){
+        const robotArena : RobotsArenaEntity = {};
+    
+        robotArena.robot = bot;
+        robotArena.arena = arena;
+        let r_robotsArena : Array<RobotsArenaEntity> = await bot.robotsArena;
+
+        if (!r_robotsArena){
+            r_robotsArena = [];
+        }
+        r_robotsArena.push(robotArena);
+        bot.robotsArena = Promise.resolve(r_robotsArena);
+        let a_robotsArena : Array<RobotsArenaEntity> = await arena.robotArena;
+
+        if (!a_robotsArena){
+            a_robotsArena = [];
+        }
+        a_robotsArena.push(robotArena);
+        arena.robotArena = Promise.resolve(a_robotsArena);
+        return (bot);
     }
 }
