# app/api-node/src/resources/asm/UserResourceAsm.ts
@@ -1,32 +1,17 @@
 import UserEntity from "../../database/entities/UserEntity";
 import IUserResource from "../IUserResource";
 import { ERolesStatus } from "../ERolesStatus";
-import { GameProfileResourceAsm } from "./GameProfileResourceAsm"; 
-import { Inject } from "typescript-ioc";
+import { Singleton, Inject } from "typescript-ioc";
+import { UserGameProfileResourceAsm } from "./UserGameProfileResourceAsm";
 
+@Singleton
 export class UserResourceAsm {
-
     @Inject
-    private gameProfileResourceAsm : GameProfileResourceAsm;
+    private userGameProfileResourceAsm: UserGameProfileResourceAsm;
+
 
     public async toResource(user: UserEntity){
-        const resource: IUserResource = {
-            firstname: user.firstname,
-            lastname: user.lastname,
-            email: user.email,
-            pseudo: user.pseudo,
-            id: user.id,
-            address: user.address,
-            password: user.hash,
-            roles: user.roles
-        };
-        if (user.players){
-            resource.gameProfile = (await user.players).map((player) => {
-                return this.gameProfileResourceAsm.toResource(player);
-            });
-        }
-
-        return (resource);
+        return this.userGameProfileResourceAsm.toUserResource(user);
     }
 
     public async toResources(users: Array<UserEntity>){
@@ -42,23 +27,7 @@ export class UserResourceAsm {
     }
 
     public toEntity(resource: IUserResource){
-        const entity : UserEntity = {
-            firstname: resource.firstname,
-            lastname: resource.lastname,
-            address: resource.address,
-            pseudo: resource.pseudo,
-            email: resource.email,
-            roles: ERolesStatus.ROLE_USER,
-            hash: resource.password
-        };
-        if (!resource.gameProfile){
-            resource.gameProfile = [];
-        }
-
-        entity.players = Promise.resolve(resource.gameProfile.map(profile => {
-            return this.gameProfileResourceAsm.toEntity(profile);
-        }));
-        return (entity);
+        return this.userGameProfileResourceAsm.toUserEntity(resource);
     }
 
     public toAdminEntity(resource: IUserResource){
